# server/db/resources-db.js
@@ -1,6 +1,6 @@
 const { pool } = require('../config/config.js')
 
-const fetchResourcesDb = async (id) => {
+const fetchResourcesDb = async id => {
     const res = await pool.query(
         `SELECT * FROM resources WHERE facilities_id = $1`, [id]
     )
@@ -15,7 +15,15 @@ const createResourceDb = async ({facilities_id, name, description}) => {
     return res.rows[0]
 }
 
+const deleteResourceDb = async id => {
+    const res = await pool.query(
+        `DELETE FROM resources WHERE id = $1`, [id]
+    )
+    return res.rows
+}
+
 module.exports = {
     fetchResourcesDb,
-    createResourceDb
+    createResourceDb,
+    deleteResourceDb
  }
